goapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
  namespace: goapp
  labels:
    app: goapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
        - name: goapp
          image: ninucium/goapp
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1"
          ports:
            - containerPort: 8989
