goapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
  namespace: goapp
spec:
  selector:
    app: goapp
  ports:
    - protocol: TCP
      port: 8080       # Порт, на который будет доступен сервис
      targetPort: 8989  # Порт контейнера
  type: ClusterIP    # Обычно используется для внутреннего доступа
