goapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
  namespace: goapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: goapp-service
                port:
                  number: 8080  # Этот порт должен соответствовать порту, на который слушает ваш сервис
  tls:
    - hosts:
        - ninucium.ru
      secretName: example-tls
